--- a/views/layouts/layouts.ejs
+++ b/views/layouts/layouts.ejs
@@ -7,10 +7,8 @@
     <title>wellsite</title>
 </head>
 <body>
-    Before
-    <br>
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errormessage.ejs') %>
     <%- body %>
-    <br>
-    after
 </body>
 </html>
