--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
-All authors
+<h2>Recently added</h2>
+<div>
+  <% books.forEach(book => { %>
+    <img height="150" width="100" 
+    src="<%= book.coverImagePath %>">
+  <% }) %>
+</div>
