--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -8,7 +8,10 @@
 <br>
 <% authors.forEach(author =>{ %>
 
-<div>
-    <%- author.name %>
-</div>
+<div> <%- author.name %> </div>
+
+<a href="/authors/<%- author.id %>">view</a>
+<a href="/authors/<%- author.id %>/edit">edit</a>
+<%- include('../partials/deleteForm',
+              { url: `/authors/${author.id}` }) %>
 <% }) %>
