added genral styles

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <header>
-    <nav>
-        <a href="/">Mybrary</a>
+    <nav class = "headerNav">
+        <a href="/" class="headerTitle">Mybrary</a>
         <ul>
-            <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">Add Author</a></li>
-            <li><a href="/books">books</a></li>
-            <li><a href="/books/new">Add book</a></li>
+            <li class= "headerLink"><a href="/authors">Authors</a></li>
+            <li class= "headerLink"><a href="/authors/new">Add Author</a></li>
+            <li class= "headerLink"><a href="/books">books</a></li>
+            <li class= "headerLink"><a href="/books/new">Add book</a></li>
         </ul>
     </nav>    
 </header>
