--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,4 +1,4 @@
-<h2>Edit Author</h2>
+<h2 class= "pageHeader">Edit Author</h2>
 <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
   <%- include('_formfields') %>
   <a href="/authors/<%= author.id %>">Cancel</a>
