--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2>search authors</h2>
+<h2 class= "pageHeader">search authors</h2>
 <form action= "/authors" method = GET>
     <label for="#">Name</label>
     <input type="text" name="name" value ="<%- SearchOptions.name %>">
@@ -6,12 +6,13 @@
     <button type="submit">search</button>
 </form>
 <br>
-<% authors.forEach(author =>{ %>
-
-<div> <%- author.name %> </div>
-
-<a href="/authors/<%- author.id %>">view</a>
-<a href="/authors/<%- author.id %>/edit">edit</a>
-<%- include('../partials/deleteForm',
-              { url: `/authors/${author.id}` }) %>
+<% authors.forEach(author => { %>
+  <div><%= author.name %></div>
+  <div class="buttonRow">
+    <a class="btn btnPrimary" href="/authors/<%= author.id %>">View</a>
+    <a class="btn btnPrimary" href="/authors/<%= author.id %>/edit">Edit</a>
+    <%- include('../partials/deleteForm',
+                { url: `/authors/${author.id}` }) %>
+  </div>
 <% }) %>
+
