--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,4 +1,4 @@
-<h2>New Author</h2>
+<h2 class= "pageHeader" >New Author</h2>
 <form action="/authors" method = "POST">
 <%- include('_formfields') %>
 <a href="/authors">cancle</a>
