--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,4 +1,4 @@
-<h2>New Book</h2>
+<h2 class= "pageHeader">New Book</h2>
 <form action="/books" method="POST">
   <%- include('_formfields') %>
   <a href="/books">Cancel</a>
