--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,18 +1,27 @@
 <h2 class= "pageHeader">search authors</h2>
 <form action= "/authors" method = GET>
-    <label for="#">Name</label>
-    <input type="text" name="name" value ="<%- SearchOptions.name %>">
 
-    <button type="submit">search</button>
+        <div class="form-row">
+          <div class = "form-item">
+            <label >Name</label>
+            <input type="text" name="name" value ="<%= SearchOptions.name %>">
+          </div>
+        </div>
+
+        <div class="form-row form-row-end">
+    <button class="btn btn-primary" type="submit">Search</button>
+  </div>   
 </form>
 <br>
 <% authors.forEach(author => { %>
-  <div><%= author.name %></div>
-  <div class="buttonRow">
-    <a class="btn btnPrimary" href="/authors/<%= author.id %>">View</a>
-    <a class="btn btnPrimary" href="/authors/<%= author.id %>/edit">Edit</a>
-    <%- include('../partials/deleteForm',
-                { url: `/authors/${author.id}` }) %>
-  </div>
+<div class ="author-row">
+       <div class= "author-name"><%= author.name %></div>
+      <div class="buttonRow ">
+        <a class="btn btnPrimary " href="/authors/<%= author.id %>">View</a>
+        <a class="btn btnPrimary " href="/authors/<%= author.id %>/edit">Edit</a>
+        <%- include('../partials/deleteForm',
+                    { url: `/authors/${author.id}` }) %>
+      </div>
+</div>
+ 
 <% }) %>
-
