--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,19 +1,30 @@
 <h2 class= "pageHeader"><%= book.title %></h2>
-<img width ="100" height = "150" src="<%= book.coverImagePath %>" alt="">
-<div>
-    Author: <%= book.author.name %>
-</div>
-<div>
-    Publish Date: <%= book.publishDate.toDateString() %>
-</div>
-<div>
-    Page Count: <%= book.pageCount %>
-</div>
-<div>
-    Description: <%= book.description %>
+
+<div class="book-details" >
+    <div>
+            <img class="book-cover" src="<%= book.coverImagePath %>" alt="">
+
+        <div class="book-details-btn-grid">
+                <a class="btn btnPrimary" href="/books/<%= book.id %>/edit">Edit</a>
+                <%- include('../partials/deleteForm', { url: `/books/${book.id}` }) %>
+                <a class="btn btnPrimary book-details-author-button" href="/authors/<%= book.author.id %>">View Author</a>
+    </div>
+        
+            
+    </div>
+
+    <div class="book-details-grid">
+        <div class="book-details-lable">Author: </div>
+        <div><%= book.author.name %></div>
+        <div class="book-details-lable">Publish Date: </div>
+        <div><%= book.publishDate.toDateString() %></div>
+        <div class="book-details-lable">Page Count: </div>
+        <div><%= book.pageCount %></div>
+        <div class="book-details-lable">Description: </div>
+        <div> <%= book.description %></div>
+    </div>        
+
 </div>
 
-<a href="/books/<%= book.id %>/edit">edit</a>
-<%- include('../partials/deleteForm', {url: `/books/${book.id}`}) %>
-<a href="/authors/<%= book.author.id %>">View Author</a>
+
 
