--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,3 @@
 <h2 class= "pageHeader">Recently added</h2>
-<div>
-  <% books.forEach(book => { %>
-  <a href="/books/<%= book.id %>">
-    <img height="150" width="100" 
-    src="<%= book.coverImagePath %>">
-  </a>
-  <% }) %>
-</div>
+
+<%- include('partials/bookgrid',{ books: books, large: true })%>
