--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,18 +16,12 @@
     <title>wellsite</title>
 </head>
 <body>
-
-    <div class= "container">
-    
-        <%- include('../partials/header.ejs') %>
-
-            <div class=".innerContainer">
-                <%- include('../partials/errormessage.ejs') %>
-            <%- body %>
-            </div>
-        
-    </div>
-    
-    
-</body>
-</html>
+        <div class="container">
+          <%- include('../partials/header.ejs') %>
+              <div class="inner-container">
+                <%%- include('../partials/errorMessage.ejs')  %> 
+                <%- body %>
+              </div>
+        </div>
+  </body>
+  </html>
