--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,12 +1,8 @@
-<h2 class= "pageHeader">Edit Author</h2>
+<h2 class="page-header">Edit Author</h2>
 <form action="/authors/<%= author.id %>?_method=PUT" method="POST">
-  <%- include('_formfields') %>
-
-  <div class="form-row form-row-end buttonRow">
-    <a class ="btn btnDanger" href="/authors/<%= author.id %>">Cancel</a>
-    <button class ="btn btnPrimary" type="submit">Update</button>
+  <%- include('_form_fields') %>
+  <div class="form-row form-row-end btn-row">
+    <a class="btn btn-danger" href="/authors/<%= author.id %>">Cancel</a>
+    <button class="btn btn-primary" type="submit">Update</button>
   </div>
-  
-</form>
-    
 </form>
