--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,28 +1,17 @@
-<h2 class= "pageHeader">Search Book</h2>
+<h2 class="page-header">Search Book</h2>
 <form action="/books" method="GET">
-
   <div class="form-row">
-
     <div class="form-item">
-
       <label>Title</label>
       <input type="text" name="title" value="<%= searchOptions.title %>">
-    
     </div>
-
   </div>
-
   <div class="form-row">
-
     <div class="form-item">
       <label>Published After</label>
       <input type="date" name="publishedAfter" value="<%= searchOptions.publishedAfter %>">
     </div>
-   
-  
-    
- 
-   <div class="form-item">
+    <div class="form-item">
       <label>Published Before</label>
       <input type="date" name="publishedBefore" value="<%= searchOptions.publishedBefore %>">
     </div>
@@ -32,4 +21,4 @@
   </div>
 </form>
 <br>
-<%- include('../partials/bookgrid',{ books: books, large: true})%>
+<%- include('../partials/bookGrid', { books: books, large: true }) %>
