--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,2 @@
-<h2 class= "pageHeader">Recently added</h2>
-
-<%- include('partials/bookgrid',{ books: books, large: true })%>
+<h2 class="page-header">Recently Added</h2>
+<%- include('partials/bookGrid', { books: books, large: true }) %>
