--- a/views/partials/errormessage.ejs
+++ b/views/partials/errormessage.ejs
@@ -1,5 +1,3 @@
-<% if(locals.errorMessage != null) { %>
-<div class = "error-message ">
-    <%- errorMessage %>
-</div>
-<% } %>
+<% <% if (locals.errorMessage != null) { %>
+    <div class="error-message"><%= errorMessage %></div>
+  <% } %>
