--- a/public/stylesheets/shared/books.css
+++ b/public/stylesheets/shared/books.css
@@ -32,6 +32,8 @@
   font-size: 1.2rem;
   font-weight: 500;
   align-self: flex-start;
+  font-family: 'Poppins';
+  padding-left: .5rem;
 }
 
 .book-details-grid {
@@ -52,9 +54,11 @@
     "author author";
   grid-gap: .5rem;
   margin-top: .5rem;
+  
 }
 
 .book-details-author-button {
   grid-area: author;
   justify-self: stretch;
+  
 }
