--- a/public/stylesheets/shared/buttons.css
+++ b/public/stylesheets/shared/buttons.css
@@ -1,24 +1,25 @@
 :root {
-    --color-btn-primary-background: hsl(var(--color-base-hue), 100%, 83%);
+    --color-btn-primary-background: #08e1f1;
     --color-btn-primary-background-dark: hsl(var(--color-base-hue), 100%, 73%);
     --color-btn-primary-text: hsl(var(--color-base-hue), 100%, 20%);
     --color-btn-primary-text-dark: hsl(var(--color-base-hue), 100%, 10%);
     --color-btn-border: black;
-    --color-btn-danger-background: hsl(var(--color-danger-hue), 100%, 83%);
+    --color-btn-danger-background: #c40aabc5;
     --color-btn-danger-background-dark: hsl(var(--color-danger-hue), 100%, 73%);
-    --color-btn-danger-text: black;
+    --color-btn-danger-text: rgb(248, 231, 231);
     --color-btn-danger-text-dark: black;
   }
   
   .btn {
     border: 1px solid var(--color-btn-border);
-    border-radius: .5rem;
-    padding: .5rem 1rem;
-    font-size: 1.2rem;
+    border-radius: 3rem;
+    padding: .3rem .7rem;
+    font-size: 1rem;
     font-family: 'Gotham Rounded';
     cursor: pointer;
     text-decoration: none;
     text-align: center;
+    font-family: 'Poppins';
   }
   
   .btn-row {
